--- a/public/index.html
+++ b/public/index.html
@@ -35,4 +35,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdn3.devexpress.com/jslib/19.1.4/js/dx.all.js"></script>
 </html>
